correction spacing

--- a/contact.css
+++ b/contact.css
@@ -23,7 +23,7 @@ body {
 	grid-template-columns: repeat(2, 1fr);
 	justify-content: center;
 	align-items: center;
-	padding-bottom: var(--spaci);
+	padding-bottom: var(--spacing);
 	background-color: #fff;
 	border: var(--border) solid var(--dark-color);
 	border-width: 4px;
